fix: fixed font size on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -49,7 +49,7 @@
         height: auto !important;
     }
     .ourteam {
-        font-size: 10px !important;
+        font-size: 19px !important;
         width: auto !important;
     }
     .teams {
